# llm-fine-tuning

./: .env.example  .gitignore  QUICKSTART.md  README.md  download_all_datasets.py  pyproject.toml  tasks.py
rl/: __init__.py  script_eval.py  script_train.py  settings.py  tasks.py
rl/finetuning/: config.py  data_handlers.py  experiment.py  utils.py
rl/finetuning/evaluation/: __init__.py  evaluation.py  rewards_fever.py  rewards_gsm8k.py
rl/finetuning/training/: __init__.py  base.py  dpo.py  rloo.py  sft.py
sft/: __init__.py  base_trainer.py  claim_verification.py  config.py  datasets_internal.py  factcheck_generation.py  lora_config.py  propaganda_detection.py  utils.py
sft/dataset_downloaders/: download_gsm8k.py  download_liar.py
sft/datasets/: __init__.py  download_fever.py  download_semeval.py
sft/models/: base_gpt.py  external_model.py  gpt2.py
sft/modules/: attention.py  gpt2_layer.py
tests/: __init__.py  conftest.py
tests/sft/: __init__.py  test_data_loading.py  test_smoke.py
