[project]
name = "llm-fine-tuning"
version = "0.1.0"
description = "LLM fine-tuning experiments: supervised fine-tuning with LoRA/ReFT and reinforcement learning with RLOO/DPO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.32.0",
    "nltk>=3.9.1",
    "nnsight>=0.3.0",
    "openai>=1.82.1",
    "pandas>=2.2.0",
    "peft>=0.15.2",
    "pyreft==0.1.0",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.5.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.45.1,<4.52.0",
    "wandb>=0.19.11",
]

[dependency-groups]
dev = [
    "colorlog>=6.9.0",
    "invoke>=2.2.0",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sft", "rl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
